obrisani nepotrebni fajlovi

--- a/contact.html
+++ b/contact.html
@@ -126,8 +126,8 @@
           </div><!-- End Google Maps -->
 
           <div class="col-lg-6">
-           <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form"> -->
-            <form action="forms/sendmail.php" method="post" role="form" class="php-email-form">
+           <!-- <form action="#" method="post" role="form" class="php-email-form"> -->
+            <form action="#" method="post" role="form" class="php-email-form">
               <p>Imate građevinske radove u planu? Pošaljite nam poruku i dogovorićemo se.</p>
               <div class="row gy-4">
                 <div class="col-lg-6 form-group">
