--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
 
           <div class="col-lg-5" data-aos="fade">
-            <form action="forms/quote.php" method="post" class="php-email-form">
+            <form action="#" method="post" class="php-email-form">
               <h3>Kontaktirajte nas</h3>
               <p>Za sve Vaše potrebe u vezi sa građevinskim ili građevinsko-zanatskim radovima, stojimo na raspolaganju. Kontaktirajte nas porukom.</p>
               <div class="row gy-3">
